[package]
name = "hello-rust"
version = "0.1.0"
authors = ["zing <599490911@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[[bin]]
#doc=false
#name= "app"
#path="src/main.rs"
[[example]]
name = "example"

[workspace]
members = [
    "demo/hello-world",
    "demo/diesel/sqlite/getting_started_step_1"
]

[dependencies]
ferris-says = "0.1"
rand = "0.4.0"
rust-crypto = "0.2"
chrono = "0.4"
serial = "0.4"
diesel = { version = "1.0.0", features = ["sqlite"] }
dotenv = "0.9.0"
#rusqlite ="0.23.1"

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]
