[package]
name = "hello-rust"
version = "0.1.0"
authors = ["zing <599490911@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[[bin]]
#doc=false
#name= "app"
#path="src/main.rs"
[[example]]
name = "example"

[workspace]
members = [
    "crates/rand",
    "crates/tokio/quickstart",
    "demo/hello-world",
    "demo/socket2/quick-start",
    "demo/diesel/sqlite/getting_started_step_1",
    "demo/my-mini-redis/tokio",
    "demo/my-mini-redis/spawning",
    "demo/my-mini-redis/shared-state"
#    "rustlings/exercises/clippy"
]

[dependencies]
ferris-says = "0.1"
rand = "0.8.3"
chrono = "0.4"
diesel = { version = "1.0.0", features = ["sqlite"] }
dotenv = "0.9.0"
#rusqlite ="0.23.1"
byteorder = "1.3.4"
actix-web = "2.0.0"
actix-rt  ="1.1.1"
actix-http = "1.0.1"
serial = "0.4"
itertools = "0.10.0"
rust-crypto = "0.2.36"
serde = "1.0.125"
env_logger = "0.6"

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]
