[package]
name = "crates-actix"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { version = "0.10.0" }
actix-web = { version = "3.3.2", features = ["openssl"] }
actix-cors = "^0.5.4"
actix-web-actors = "3.0.0"
actix-server = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.67"
openssl = { version = "^0.10.36" }
futures = { version = "0.3.17" }
futures-util = { version = "0.3.17" }
log = "^0.4.0"
uuid = { version = "0.8.2", features = ["v4"] }
