[package]
name = "rusqlite-crates"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "quickstart"
path = "src/quickstart.rs"

[dependencies]
rusqlite = { version = "0.26.0", features = ["bundled"] }